# legacymock

./: CMakeLists.txt  CMake_ProjectConfig.txt  amalganate.py  build.py  dump.h
citrix.binutils.udis86/: CMakeLists.txt
citrix.binutils.udis86/include/citrix/binutils/udis86/: InstructionLengthDecoder.h
citrix.binutils.udis86/src/: InstructionLengthDecoder.cpp
citrix.binutils.udis86/src/libudis86/: decode.cpp  decode.h  itab.cpp  itab.h  syn-att.cpp  syn-intel.cpp  syn.cpp  syn.h  types.h  udint.h  udis86.cpp
citrix.gmock/: CMakeLists.txt
citrix.gmock/include/gmock/: gmock-actions.h  gmock-matchers.h  gmock.h
citrix.gmock/include/gtest/: gtest.h
citrix.gmock/src/: GoogleMock.cpp  gtest.cc
citrix.hooking/: CMakeLists.txt
citrix.hooking/include/citrix/hooking/: CtorAndDtor.h  Hooking.h
citrix.hooking/include/citrix/hooking/x86_32/: X86CtorAddressDetector.h  X86Decoder.h  X86Hook.h  X86HookRecursionGuard.h  X86Relocator.h  X86Utils.h
citrix.hooking/src/x86_32/: X86CtorAddress.cpp  X86Hook.cpp  X86Relocator.cpp  X86Utils.cpp
citrix.hooking/tests/: Hooking_CtorDtorTest.cpp  Hooking_RecursiveTest.cpp  X86DecoderTest.cpp  X86Hook_SimpleTest.cpp  X86RelocatorTest.cpp  X86UtilsTest.cpp
citrix.mocking/: CMakeLists.txt
citrix.mocking.generator/: CMakeLists.txt
citrix.mocking.generator/src/: Configuration.cpp  Configuration.h  CppParser.cpp  CppParser.h  Emitter.cpp  Emitter.h  HeaderEmitter.cpp  HeaderEmitter.h  ImplementationEmitter.cpp  ImplementationEmitter.h  StringUtils.cpp  StringUtils.h  boost_program_options.cpp  main.cpp  stdafx.h
citrix.mocking.generator/tests/: CodeRegionMapTest.cpp
citrix.mocking/include/citrix/mocking/: CodeRegionMap.h  GMock.h  MockManager.h  MockWrapper.h  Mocking.h  RegexMapper.h  VirtualCallDetector.h
citrix.mocking/src/: BulkMockGenerator.py  CppHeaderParser.py  CppHeaderParserStub.py  EmitterBase.py  EmitterConfig.py  HooksInternalEmitter.py  MockHeaderEmitter.py  RegexMapper.cpp  TypedefClosure.py  cpp_to_mock.py  cpp_to_mock_bulk.py
citrix.mocking/src/x86_32/: X86VirtualCallDetector.cpp
citrix.mocking/tests/: AccessorTest.cpp  ClassClosure.h  CustomMockTest.cpp  FreeApiHookTest.cpp  GMockBaseABCTest.cpp  GMockUsageTest.cpp  GoogleMockTest.cpp  PPDirectiveScannerTest.cpp  PrivateAndProtectedTest.cpp  TODOList.cpp  VariableAccessibilityTest.cpp
citrix.tracing/: CMakeLists.txt
citrix.tracing/include/citrix/tracing/: CallTrace.h  DefaultTranslators.h  IndirectionResolver.hpp  Translator.h
citrix.tracing/src/: BoostJsonParserHotfix.py  UnicodeSupport.cpp
citrix.tracing/tests/: IndirectionResolverTest.cpp
docs/: What is Legacy Mock.docx
examples/minimal/: CMakeLists.txt  GenerateMocks.py  MyClass.cpp  MyClass.h  main.cpp
include/citrix/: Config.h  Platform.h  SystemPreincludeFixes.h
include/citrix/predef/: README.txt  architecture.h  compiler.h  language.h  library.h  make.h  os.h  other.h  platform.h  predef.h
include/citrix/predef/architecture/: alpha.h  arm.h  blackfin.h  convex.h  ia64.h  m68k.h  mips.h  parisc.h  ppc.h  pyramid.h  rs6k.h  sparc.h  superh.h  sys370.h  sys390.h  x86.h  z.h
include/citrix/predef/architecture/x86/: 32.h  64.h
include/citrix/predef/compiler/: borland.h  clang.h  comeau.h  compaq.h  diab.h  digitalmars.h  dignus.h  edg.h  ekopath.h  gcc.h  gcc_xml.h  greenhills.h  hp_acc.h  iar.h  ibm.h  intel.h  kai.h  llvm.h  metaware.h  metrowerks.h  microtec.h  mpw.h  palm.h  pgi.h  sgi_mipspro.h  sunpro.h  tendra.h  visualc.h  watcom.h
include/citrix/predef/detail/: endian_compat.h
include/citrix/predef/language/: objc.h  stdc.h  stdcpp.h
include/citrix/predef/os/: aix.h  amigaos.h  android.h  beos.h  bsd.h  cygwin.h  hpux.h  irix.h  linux.h  macos.h  os400.h  qnxnto.h  solaris.h  unix.h  vms.h  windows.h
include/citrix/predef/os/bsd/: bsdi.h  dragonfly.h  free.h  net.h  open.h
include/citrix/predef/other/: endian.h
include/citrix/predef/platform/: mingw.h
include/citrix/srclink/: .gitignore  LegacyMock-stdafx.h
include/citrix/type_traits/: default_constructor.hpp  make_reference.hpp  member_function_pointer_traits.hpp  normalize_type.hpp  return_type_of_function.hpp
single-file-compile/: main.cpp
single-file-compile/cmake/: CMakeLists.txt
unittests/: .gitignore  CMakeLists.txt  CustomTypesForTesting.h  MemFuncPtrTraitsTest.cpp  main.cpp  stdafx.h
unittests/TestGenerators/: CallTraceTestGenerator.py  GenerateTests.py  GoogleMockTestGenerator.py  TestGenerator.py  TestObjectGenerator.py  TracingTestGenerator.py  gen_IncludeTest.py
unittests/ThingsToMock/: AllInOne.h  BaseABC.h  ConditionalCompilation.h  FreeApiHook.h  GenerateTestMocks.py  Modifiers.h  NestedTypes.h  NoGMockForThisOne.h  NonCopyableNonDefaultCtor.h  NotConstructibleStaticOnly.h  NotSupportedAndIgnored.h  ObjectLifetime.h  PrivateAndProtected.h  TemplateClass.h  TestObject.h  VariableAccessibility.h
unittests/Utils/: AssemblerSelfTest.cpp  AssemblerTestUtils.h  StringUtils.h
